testdata/baselines/reference/submodule/conformance/moduleExportWithExportPropertyAssignment4.errors.txt
a.js(6,6): error TS2339: Property 'justProperty' does not exist on type '{ (): void; justExport: number; bothBefore: number; bothAfter: number; }'.
mod1.js(6,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== a.js (1 errors) ====
    /// <reference path='./requires.d.ts' />
    var mod1 = require('./mod1')
    mod1.justExport.toFixed()
    mod1.bothBefore.toFixed() // error
    mod1.bothAfter.toFixed()
    mod1.justProperty.length
         ~~~~~~~~~~~~
!!! error TS2339: Property 'justProperty' does not exist on type '{ (): void; justExport: number; bothBefore: number; bothAfter: number; }'.
    
==== requires.d.ts (0 errors) ====
    declare var module: { exports: any };
    declare function require(name: string): any;
==== mod1.js (1 errors) ====
    /// <reference path='./requires.d.ts' />
    module.exports.bothBefore = 'string'
    A.justExport = 4
    A.bothBefore = 2
    A.bothAfter = 3
    module.exports = A
    ~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    function A() {
        this.p = 1
    }
    module.exports.bothAfter = 'string'
    module.exports.justProperty = 'string'
    